edit register page and some featuers add

--- a/frontend_site/gui/src/pages/login/login.scss
+++ b/frontend_site/gui/src/pages/login/login.scss
@@ -1,7 +1,6 @@
 /*
-
+    
 */
-
 .logo-login {
     display: block;
     margin: 0 auto;
@@ -21,6 +20,9 @@
 
 }
 
-.custom-link-login {
-    
+.span-login-page {
+    display: block;
+    margin-left: 45%;
+    padding-top: 10px;
+
 }
