--- a/frontend_site/gui/src/pages/register/register.scss
+++ b/frontend_site/gui/src/pages/register/register.scss
@@ -1,9 +1,17 @@
 
-.custom-register-form {
-   
-    h1 {
-        text-align: center;
-        margin-top: 60px;
+.logo-register {
+    display: block;
+    margin: 0 auto;
+    width: 500px;
+    margin-top: 100px;
+    margin-bottom: 50px 
+}
 
-    }
+.custom-register-page{
+    padding: 30px;
+    width:  600px;
+    font-display: block;
+    margin: auto;
+    
+
 }
