add link to blog in homepage & fiexd  image blog

--- a/frontend_site/gui/src/pages/blog/blog.scss
+++ b/frontend_site/gui/src/pages/blog/blog.scss
@@ -1,9 +1,9 @@
 
-.custom-link-fontaewsome {
+// .custom-link-fontaewsome {
 
-    i:hover {
-        transform: scale(1.4);
-        transition-duration: .2s;
-    }
+//     i:hover {
+//         transform: scale(1.4);
+//         transition-duration: .2s;
+//     }
 
-}
+// }
