--- a/frontend_site/gui/src/pages/home/Homepage.scss
+++ b/frontend_site/gui/src/pages/home/Homepage.scss
@@ -1,13 +1,17 @@
 .custom-articles {
 
     font-size: 15px;
-    box-shadow: 1px 1px 12px 1px rgb(46, 45, 45); 
     margin-top: 100px;
     margin-left: 10px;
 
     &:hover {
-        box-shadow: 2px 2px 20px 5px #867d7d;
-        transition: all .4s;
+    transition: all .4s;
+    -webkit-transform: translateY(-3px);
+    -moz-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
+    -o-transform: translateY(-3px);
+     transform: translateY(-3px);
+    box-shadow: 0 0 20px rgba(174,174,174,0.6)
     }
 
 
